# imgbasics

./: .gitignore  Examples_Basics.ipynb  MANIFEST.in  README.md  pyproject.toml  setup.cfg
imgbasics/: __init__.py  contours.py  cropping.py  imcrop.py  transform.py
tests/: test_basics.py  test_transform.py
