[metadata]
name = imgbasics
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/imgbasics
description = Basic image analysis tools (cropping, contour properties, etc.)
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = image, analysis, crop, imcrop, cropping, contour, contours, centroid, perimeter, area
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    drapo >= 1.0.5
    importlib-metadata
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
